--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,17 +19,336 @@
 </head>
 
 <body>
-	<section class="wrapper">
+	<section class="container">
 		<header class="header">
-			<h1 class="logo">효담상조, A플러스</h1>
+			<h1 class="logo">A+라이프 효담상조</h1>
+			<nav>
+				<ul>
+					<li><a href="">회사소개</a></li>
+					<li><a href="">상품안내</a></li>
+					<li><a href="">주요고객사</a></li>
+					<li><a href="">이용후기</a></li>
+					<li><a href="">장례정보</a></li>
+				</ul>
+			</nav>
+			<ul class="util">
+				<li><a href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
+				<li><a href="">e하늘 장사정보</a></li>
+			</ul>
 		</header>
-		<main class="contents">
+		
+		<main class="contents-container">
+			<section class="visual">
+				<aside class="aside-consulting">
+					<div class="consulting-con">
+						<h2>가입상담신청</h2>
+						<form action="">
+							<div>
+								<label for="">이름</label>
+								<input type="text" />
+							</div>
+							<div>
+								<label for="">연락처</label>
+								<input type="tel" />
+							</div>
+							<div>
+								<label for="">상담가능시간</label>
+								<select name="" id="">
+									<option value="">09:00 ~ 10:00</option>
+								</select>
+							</div>
+							<div>
+								<input type="checkbox" />
+								<label for="">개인정보처리방침에 동의합니다.</label>
+								<button type="button">약관보기</button>
+							</div>
+							<button type="button">상담신청</button>
+						</form>
+					</div>
+					<div class="consulting-con">
+						<h2>실시간상담내역</h2>
+						<ul class="consulting-list">
+							<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
+							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						</ul>
+						<ul class="tel-list">
+							<li><a href="tel:1688-8860"><em>상담문의 / 09 ~ 18시</em><strong>1688-8860</strong></a></li>
+							<li><a href="tel:1688-8890"><em>긴급상담 / 24시</em><strong>1688-8890</strong></a></li>
+						</ul>
+					</div>
+				</aside>
+				<div class="visual-slider swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide"></div>
+						<div class="swiper-slide"></div>
+						<div class="swiper-slide"></div>
+						<div class="swiper-slide"></div>
+					</div>
+				</div>
+				<div class="customer-list swiper-container">
+					<ul class="swiper-wrapper">
+						<li class="swiper-slide">삼성전자</li>
+						<li class="swiper-slide">기아자동차</li>
+						<li class="swiper-slide">한국전력공사</li>
+					</ul>
+				</div>
+				<ul class="achievements-list">
+					<li><span><em>2012년 2월 업계 최초</em><strong>5대 품질 보증제 시행</strong></span></li>
+					<li><span><em>2019년 의전수행</em><strong>7,930<em>회</em></strong></span></li>
+					<li><span><em>국가주요인물 / 사회제명인사</em><strong>장례 수행 실적</strong></span></li>
+				</ul>
+			</section>
 
+			<article class="contents">
+				<header>
+					<h2>상품안내</h2>
+					<h3>고객감동 서비스 실현, 가족의 마음으로 효와정성을 담아 모시겠습니다.</h3>
+				</header>
+				<ul>
+					<li>
+						<a href="">
+							<h4><em>무빈소 간소한 장례</em><strong>HD90</strong></h4>
+							<p>자세히보기</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<h4><em>알뜰한 실속 장례</em><strong>HD149</strong></h4>
+							<p>자세히보기</p>
+						</a>
+					</li>
+				</ul>
+			</article>
+
+			<article class="contents">
+				<header>
+					<h2>효담상조 차별화 서비스 01</h2>
+					<h3>모바일 부고장</h3>
+					<p>카카오톡, SNS로 간편하게 <br />부고소식을 전할 수 있는 모바일 부고장</p>
+					<p><em>내용 수정시 자동 반영 기능 탑재</em></p>
+				</header>
+				<img src="" alt="">
+			</article>
+
+			<article class="contents">
+				<header>
+					<h2>효담상조 차별화 서비스 02</h2>
+					<h3>메뉴판 서비스</h3>
+					<p>불필요한 식사 제공을 방지하여, 버려지는 음식을 줄이고 <br /><strong>접대식사비를 크게 절감해드리는 A+만의 특화서비스</strong></p>
+					<dl>
+						<dt>메뉴판 서비스 이용 효과</dt>
+						<dd>전체 장례비용 중 가장 큰 비중은 식사 접대 (약 40~70% 차지)<br />
+							도입 운영 결과 <strong>식대 약 30~50% 절감</strong><br />
+							<strong>조문객 500名 기준 7,500,000원 → 5,250,000원</strong><br />
+							<strong>2,250,000원 절감</strong> (실제 운영 결과)
+						</dd>
+					</dl>
+				</header>
+				<img src="" alt="">
+			</article>
+
+			<article class="contents">
+				<header>
+					<h2>임종 前·後 관리 서비스</h2>
+					<h3>임종전과 임종후에도 제공드리는 효담의 특화 서비스</h3>
+				</header>
+				<div>
+					<div>
+						<h4>임종 前</h4>
+						<div>
+							<h5>사전 장례무료 컨설팅</h5>
+							<ul>
+								<li>장례비용 / 식장 / 절차 설계</li>
+								<li>안장시설 동행 서비스</li>
+								<li>24시간 내 방문 상담 및<br />이메일로 컨설팅북 제공 (10~15페이지)</li>
+							</ul>
+						</div>
+						<div>
+							<h5>엔딩노트 제공</h5>
+							<ul>
+								<li>인생 리뷰 미 재설계</li>
+								<li>필요시 무료제공</li>
+							</ul>
+						</div>
+					</div>
+					<div>
+						<h4>임종 後</h4>
+						<div>
+							<h5>장례 후 행정안내서</h5>
+							<ul>
+								<li>사망신고, 연금신청, 상속, 보험금 청구, <br />휴대폰 해지 등 유가족 궁금증 해소</li>
+								<li>3단 접지 (용품박스 삽입)</li>
+							</ul>
+						</div>
+						<div>
+							<h5>제휴 장례식장 및 장지 할인</h5>
+							<ul>
+								<li>전국 유명 장지시설 및 장례식장 <br />시설사용료 할인 제공</li>
+								<li>20%~50% 할인가 제공</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</article>
+
+			<article class="contents">
+				<header>
+					<h2>이용방법</h2>
+					<h3>간편하고 편리한 효담상조만의 장례 서비스</h3>
+				</header>
+				<ol>
+					<li>
+						<dl>
+							<dt>장례접수</dt>
+							<dd>전화, 문자, 인터넷을 통해 접수</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>상담원 상담</dt>
+							<dd>365일 24시간 상황실 운영</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>장례지도사 출동</dt>
+							<dd>최장 3시간 내</dd>
+						</dl>
+					</li>	
+					<li>
+						<dl>
+							<dt>장례 절차 안내진행</dt>
+							<dd>장례 행정 안내</dd>
+						</dl>
+					</li>	
+					<li>
+						<dl>
+							<dt>발인전 결제</dt>
+							<dd></dd>
+						</dl>
+					</li>
+				</ol>
+			</article>
+
+			<section class="contents board">
+				<article class="list-board">
+					<header>
+						<h2>부고안내</h2>
+						<div class="btn-wrap">
+							<div class="btn-move">
+								<button type="button">prev</button>
+								<button type="button">next</button>
+							</div>
+							<button class="btn-more">more</button>
+						</div>
+					</header>
+					<div class="swiper-container">
+						<ul class="swiper-wrapper">
+							<li class="swiper-slide"></li>
+							<li class="swiper-slide"></li>
+							<li class="swiper-slide"></li>
+							<li class="swiper-slide"></li>
+						</ul>
+					</div>
+				</article>
+
+				<article class="gallery-board">
+					<header>
+						<h2>이용후기</h2>
+						<div class="btn-wrap">
+							<div class="btn-move">
+								<button type="button">prev</button>
+								<button type="button">next</button>
+							</div>
+							<button class="btn-more">more</button>
+						</div>
+					</header>
+					<div class="swiper-container">
+						<ul class="swiper-wrapper">
+							<li class="swiper-slide"></li>
+							<li class="swiper-slide"></li>
+							<li class="swiper-slide"></li>
+							<li class="swiper-slide"></li>
+						</ul>
+					</div>
+				</article>
+			</section>
 		</main>
-		<footer class="footer">
 
+		<footer class="footer">
+			<ul class="footer-util">
+				<li><a href="">개인정보처리방침</a></li>
+				<li><a href="">홈페이지이용약관</a></li>
+				<li><a href="">이메일무단수집거부</a></li>
+				<li><a href="">중요정보고시</a></li>
+				<li><a href="">부가서비스</a></li>
+			</ul>
+			<div class="copy">
+				<div class="logo">
+					<img src="" alt="A+라이프"  />
+					<img src="" alt="효담">
+				</div>
+				<ul class="info">
+					<li>서울특별시 강남구 역삼로 415 성진빌딩 7층</li>
+					<li>대표이사 박성수</li>
+					<li>사업자등록번호 120-87-33918</li>
+					<li>통신판매업신고번호 : 제 2009-서울강남-01147호</li>
+					<li>방문판매업신고번호 : 제 2009-서울강남-0099호</li>
+				</ul>
+			</div>
 		</footer>
 	</section>
+	
+	<!-- fix 가입상담신청 폼 -->
+	<aside class="aside-consulting fix-aside">
+		<butto class="btn-consulting" type=" button">가입상담신청</button>
+		<div class="consulting-con">
+			<h2>가입상담신청</h2>
+			<form action="">
+				<div>
+					<label for="">이름</label>
+					<input type="text" />
+				</div>
+				<div>
+					<label for="">연락처</label>
+					<input type="tel" />
+				</div>
+				<div>
+					<label for="">상담가능시간</label>
+					<select name="" id="">
+						<option value="">09:00 ~ 10:00</option>
+					</select>
+				</div>
+				<div>
+					<input type="checkbox" />
+					<label for="">개인정보처리방침에 동의합니다.</label>
+					<button type="button">약관보기</button>
+				</div>
+				<button type="button">상담신청</button>
+			</form>
+		</div>
+		<div class="consulting-con">
+			<h2>실시간상담내역</h2>
+			<ul class="consulting-list">
+				<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
+				<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+				<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+				<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+				<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+				<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+				<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+			</ul>
+			<ul class="tel-list">
+				<li><a href="tel:1688-8860"><em>상담문의 / 09 ~ 18시</em><strong>1688-8860</strong></a></li>
+				<li><a href="tel:1688-8890"><em>긴급상담 / 24시</em><strong>1688-8890</strong></a></li>
+			</ul>
+		</div>
+	</aside>
 	<script src="src/js/index.js"></script>
 </body>
 </html>
