--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,14 +15,15 @@
 	<meta name="twitter:description" content="정직하고 착한 상조회사 효담상조에 오신것을 환영합니다.">
 	<meta name="twitter:image" content="-">
 	<meta name="twitter:card" content="summary_large_image">
-	<link rel="stylesheet" href="src/css/styles.css">
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
 	<section class="container">
 		<header class="header">
 			<h1 class="logo">A+라이프 효담상조</h1>
-			<nav>
+			<nav class="gnb">
 				<ul>
 					<li><a href="">회사소개</a></li>
 					<li><a href="">상품안내</a></li>
@@ -32,8 +33,8 @@
 				</ul>
 			</nav>
 			<ul class="util">
-				<li><a href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-				<li><a href="">e하늘 장사정보</a></li>
+				<li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
+				<li><a class="info-link" href="">e하늘 장사정보</a></li>
 			</ul>
 		</header>
 		
@@ -105,178 +106,190 @@
 			</section>
 
 			<article class="contents">
-				<header>
-					<h2>상품안내</h2>
-					<h3>고객감동 서비스 실현, 가족의 마음으로 효와정성을 담아 모시겠습니다.</h3>
-				</header>
-				<ul>
-					<li>
-						<a href="">
-							<h4><em>무빈소 간소한 장례</em><strong>HD90</strong></h4>
-							<p>자세히보기</p>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<h4><em>알뜰한 실속 장례</em><strong>HD149</strong></h4>
-							<p>자세히보기</p>
-						</a>
-					</li>
-				</ul>
+				<div class="con-wrap">
+					<header>
+						<h2>상품안내</h2>
+						<h3>고객감동 서비스 실현, 가족의 마음으로 효와정성을 담아 모시겠습니다.</h3>
+					</header>
+					<ul>
+						<li>
+							<a href="">
+								<h4><em>무빈소 간소한 장례</em><strong>HD90</strong></h4>
+								<p>자세히보기</p>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<h4><em>알뜰한 실속 장례</em><strong>HD149</strong></h4>
+								<p>자세히보기</p>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</article>
 
 			<article class="contents">
-				<header>
-					<h2>효담상조 차별화 서비스 01</h2>
-					<h3>모바일 부고장</h3>
-					<p>카카오톡, SNS로 간편하게 <br />부고소식을 전할 수 있는 모바일 부고장</p>
-					<p><em>내용 수정시 자동 반영 기능 탑재</em></p>
-				</header>
-				<img src="" alt="">
+				<div class="con-wrap">
+					<header>
+						<h2>효담상조 차별화 서비스 01</h2>
+						<h3>모바일 부고장</h3>
+						<p>카카오톡, SNS로 간편하게 <br />부고소식을 전할 수 있는 모바일 부고장</p>
+						<p><em>내용 수정시 자동 반영 기능 탑재</em></p>
+					</header>
+					<img src="" alt="">
+				</div>
 			</article>
 
 			<article class="contents">
-				<header>
-					<h2>효담상조 차별화 서비스 02</h2>
-					<h3>메뉴판 서비스</h3>
-					<p>불필요한 식사 제공을 방지하여, 버려지는 음식을 줄이고 <br /><strong>접대식사비를 크게 절감해드리는 A+만의 특화서비스</strong></p>
-					<dl>
-						<dt>메뉴판 서비스 이용 효과</dt>
-						<dd>전체 장례비용 중 가장 큰 비중은 식사 접대 (약 40~70% 차지)<br />
-							도입 운영 결과 <strong>식대 약 30~50% 절감</strong><br />
-							<strong>조문객 500名 기준 7,500,000원 → 5,250,000원</strong><br />
-							<strong>2,250,000원 절감</strong> (실제 운영 결과)
-						</dd>
-					</dl>
-				</header>
-				<img src="" alt="">
+				<div class="con-wrap">
+					<header>
+						<h2>효담상조 차별화 서비스 02</h2>
+						<h3>메뉴판 서비스</h3>
+						<p>불필요한 식사 제공을 방지하여, 버려지는 음식을 줄이고 <br /><strong>접대식사비를 크게 절감해드리는 A+만의 특화서비스</strong></p>
+						<dl>
+							<dt>메뉴판 서비스 이용 효과</dt>
+							<dd>전체 장례비용 중 가장 큰 비중은 식사 접대 (약 40~70% 차지)<br />
+								도입 운영 결과 <strong>식대 약 30~50% 절감</strong><br />
+								<strong>조문객 500名 기준 7,500,000원 → 5,250,000원</strong><br />
+								<strong>2,250,000원 절감</strong> (실제 운영 결과)
+							</dd>
+						</dl>
+					</header>
+					<img src="" alt="">
+				</div>
 			</article>
 
 			<article class="contents">
-				<header>
-					<h2>임종 前·後 관리 서비스</h2>
-					<h3>임종전과 임종후에도 제공드리는 효담의 특화 서비스</h3>
-				</header>
-				<div>
+				<div class="con-wrap">
+					<header>
+						<h2>임종 前·後 관리 서비스</h2>
+						<h3>임종전과 임종후에도 제공드리는 효담의 특화 서비스</h3>
+					</header>
 					<div>
-						<h4>임종 前</h4>
 						<div>
-							<h5>사전 장례무료 컨설팅</h5>
-							<ul>
-								<li>장례비용 / 식장 / 절차 설계</li>
-								<li>안장시설 동행 서비스</li>
-								<li>24시간 내 방문 상담 및<br />이메일로 컨설팅북 제공 (10~15페이지)</li>
-							</ul>
+							<h4>임종 前</h4>
+							<div>
+								<h5>사전 장례무료 컨설팅</h5>
+								<ul>
+									<li>장례비용 / 식장 / 절차 설계</li>
+									<li>안장시설 동행 서비스</li>
+									<li>24시간 내 방문 상담 및<br />이메일로 컨설팅북 제공 (10~15페이지)</li>
+								</ul>
+							</div>
+							<div>
+								<h5>엔딩노트 제공</h5>
+								<ul>
+									<li>인생 리뷰 미 재설계</li>
+									<li>필요시 무료제공</li>
+								</ul>
+							</div>
 						</div>
 						<div>
-							<h5>엔딩노트 제공</h5>
-							<ul>
-								<li>인생 리뷰 미 재설계</li>
-								<li>필요시 무료제공</li>
-							</ul>
-						</div>
-					</div>
-					<div>
-						<h4>임종 後</h4>
-						<div>
-							<h5>장례 후 행정안내서</h5>
-							<ul>
-								<li>사망신고, 연금신청, 상속, 보험금 청구, <br />휴대폰 해지 등 유가족 궁금증 해소</li>
-								<li>3단 접지 (용품박스 삽입)</li>
-							</ul>
-						</div>
-						<div>
-							<h5>제휴 장례식장 및 장지 할인</h5>
-							<ul>
-								<li>전국 유명 장지시설 및 장례식장 <br />시설사용료 할인 제공</li>
-								<li>20%~50% 할인가 제공</li>
-							</ul>
+							<h4>임종 後</h4>
+							<div>
+								<h5>장례 후 행정안내서</h5>
+								<ul>
+									<li>사망신고, 연금신청, 상속, 보험금 청구, <br />휴대폰 해지 등 유가족 궁금증 해소</li>
+									<li>3단 접지 (용품박스 삽입)</li>
+								</ul>
+							</div>
+							<div>
+								<h5>제휴 장례식장 및 장지 할인</h5>
+								<ul>
+									<li>전국 유명 장지시설 및 장례식장 <br />시설사용료 할인 제공</li>
+									<li>20%~50% 할인가 제공</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 			</article>
 
 			<article class="contents">
-				<header>
-					<h2>이용방법</h2>
-					<h3>간편하고 편리한 효담상조만의 장례 서비스</h3>
-				</header>
-				<ol>
-					<li>
-						<dl>
-							<dt>장례접수</dt>
-							<dd>전화, 문자, 인터넷을 통해 접수</dd>
-						</dl>
-					</li>
-					<li>
-						<dl>
-							<dt>상담원 상담</dt>
-							<dd>365일 24시간 상황실 운영</dd>
-						</dl>
-					</li>
-					<li>
-						<dl>
-							<dt>장례지도사 출동</dt>
-							<dd>최장 3시간 내</dd>
-						</dl>
-					</li>	
-					<li>
-						<dl>
-							<dt>장례 절차 안내진행</dt>
-							<dd>장례 행정 안내</dd>
-						</dl>
-					</li>	
-					<li>
-						<dl>
-							<dt>발인전 결제</dt>
-							<dd></dd>
-						</dl>
-					</li>
-				</ol>
+				<div class="con-wrap">
+					<header>
+						<h2>이용방법</h2>
+						<h3>간편하고 편리한 효담상조만의 장례 서비스</h3>
+					</header>
+					<ol>
+						<li>
+							<dl>
+								<dt>장례접수</dt>
+								<dd>전화, 문자, 인터넷을 통해 접수</dd>
+							</dl>
+						</li>
+						<li>
+							<dl>
+								<dt>상담원 상담</dt>
+								<dd>365일 24시간 상황실 운영</dd>
+							</dl>
+						</li>
+						<li>
+							<dl>
+								<dt>장례지도사 출동</dt>
+								<dd>최장 3시간 내</dd>
+							</dl>
+						</li>	
+						<li>
+							<dl>
+								<dt>장례 절차 안내진행</dt>
+								<dd>장례 행정 안내</dd>
+							</dl>
+						</li>	
+						<li>
+							<dl>
+								<dt>발인전 결제</dt>
+								<dd></dd>
+							</dl>
+						</li>
+					</ol>
+				</div>
 			</article>
 
 			<section class="contents board">
-				<article class="list-board">
-					<header>
-						<h2>부고안내</h2>
-						<div class="btn-wrap">
-							<div class="btn-move">
-								<button type="button">prev</button>
-								<button type="button">next</button>
+				<div class="con-wrap">
+					<article class="list-board">
+						<header>
+							<h2>부고안내</h2>
+							<div class="btn-wrap">
+								<div class="btn-move">
+									<button type="button">prev</button>
+									<button type="button">next</button>
+								</div>
+								<button class="btn-more">more</button>
 							</div>
-							<button class="btn-more">more</button>
+						</header>
+						<div class="swiper-container">
+							<ul class="swiper-wrapper">
+								<li class="swiper-slide"></li>
+								<li class="swiper-slide"></li>
+								<li class="swiper-slide"></li>
+								<li class="swiper-slide"></li>
+							</ul>
 						</div>
-					</header>
-					<div class="swiper-container">
-						<ul class="swiper-wrapper">
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-						</ul>
-					</div>
-				</article>
-
-				<article class="gallery-board">
-					<header>
-						<h2>이용후기</h2>
-						<div class="btn-wrap">
-							<div class="btn-move">
-								<button type="button">prev</button>
-								<button type="button">next</button>
+					</article>
+	
+					<article class="gallery-board">
+						<header>
+							<h2>이용후기</h2>
+							<div class="btn-wrap">
+								<div class="btn-move">
+									<button type="button">prev</button>
+									<button type="button">next</button>
+								</div>
+								<button class="btn-more">more</button>
 							</div>
-							<button class="btn-more">more</button>
+						</header>
+						<div class="swiper-container">
+							<ul class="swiper-wrapper">
+								<li class="swiper-slide"></li>
+								<li class="swiper-slide"></li>
+								<li class="swiper-slide"></li>
+								<li class="swiper-slide"></li>
+							</ul>
 						</div>
-					</header>
-					<div class="swiper-container">
-						<ul class="swiper-wrapper">
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-						</ul>
-					</div>
-				</article>
+					</article>
+				</div>
 			</section>
 		</main>
 
@@ -303,7 +316,7 @@
 			</div>
 		</footer>
 	</section>
-	
+
 	<!-- fix 가입상담신청 폼 -->
 	<aside class="aside-consulting fix-aside">
 		<butto class="btn-consulting" type=" button">가입상담신청</button>
