main page style 작업

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,8 +27,8 @@
 	<header class="header">
 		<h1 class="logo">
 			<a href="index.html">
-				<img src="../../assets/images/logo-w-aplus.png" alt="A⁺라이프" />
-				<img src="../../assets/images/logo-w-hoydam.png" alt="e효담상조" />
+				<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
+				<img src="../../assets/images/logo/logo-w-hoydam.png" alt="e효담상조" />
 			</a>
 		</h1>
 		<nav class="gnb">
@@ -99,10 +99,30 @@
 			</aside>
 			<div class="visual-slider swiper-container">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide"></div>
-					<div class="swiper-slide"></div>
-					<div class="swiper-slide"></div>
-					<div class="swiper-slide"></div>
+					<div class="swiper-slide">
+						<div class="con-wrap">
+							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
+							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="con-wrap">
+							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
+							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="con-wrap">
+							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
+							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="con-wrap">
+							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
+							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="customer-list con-wrap swiper-container">
@@ -164,7 +184,9 @@
 					<p>카카오톡, SNS로 간편하게 <br />부고소식을 전할 수 있는 모바일 부고장</p>
 					<p><em>내용 수정시 자동 반영 기능 탑재</em></p>
 				</header>
-				<img src="" alt="">
+				<div class="img-wrap">
+					<img src="../../assets/images/visual/img-service01.png" alt="">
+				</div>
 			</div>
 		</article>
 
@@ -183,7 +205,9 @@
 						</dd>
 					</dl>
 				</header>
-				<img src="" alt="">
+				<div class="img-wrap">
+					<img src="../../assets/images/visual/img-service02.png" alt="">
+				</div>
 			</div>
 		</article>
 
@@ -193,40 +217,60 @@
 					<h2>임종 前·後 관리 서비스</h2>
 					<h3>임종전과 임종후에도 제공드리는 e효담의 특화 서비스</h3>
 				</header>
-				<div>
-					<div>
+				<div class="split-box">
+					<div class="split before">
 						<h4>임종 前</h4>
-						<div>
-							<h5>사전 장례무료 컨설팅</h5>
-							<ul>
-								<li>장례비용 / 식장 / 절차 설계</li>
-								<li>안장시설 동행 서비스</li>
-								<li>24시간 내 방문 상담 및<br />이메일로 컨설팅북 제공 (10~15페이지)</li>
-							</ul>
+						<div class="box">
+							<div class="img-wrap">
+								<img src="../../assets/images/visual/main-con4-img1.png" alt="">
+							</div>
+							<div class="txt-wrap">
+								<h5>사전 장례무료 컨설팅</h5>
+								<ul>
+									<li>장례비용 / 식장 / 절차 설계</li>
+									<li>안장시설 동행 서비스</li>
+									<li>24시간 내 방문 상담 및<br />이메일로 컨설팅북 제공 (10~15페이지)</li>
+								</ul>
+							</div>
 						</div>
-						<div>
-							<h5>엔딩노트 제공</h5>
-							<ul>
-								<li>인생 리뷰 미 재설계</li>
-								<li>필요시 무료제공</li>
-							</ul>
+						<div class="box">
+							<div class="img-wrap">
+								<img src="../../assets/images/visual/main-con4-img2.png" alt="">
+							</div>
+							<div class="txt-wrap">
+								<h5>엔딩노트 제공</h5>
+								<ul>
+									<li>인생 리뷰 미 재설계</li>
+									<li>필요시 무료제공</li>
+								</ul>
+							</div>
 						</div>
 					</div>
-					<div>
+					<div class="split after">
 						<h4>임종 後</h4>
-						<div>
-							<h5>장례 후 행정안내서</h5>
-							<ul>
-								<li>사망신고, 연금신청, 상속, 보험금 청구, <br />휴대폰 해지 등 유가족 궁금증 해소</li>
-								<li>3단 접지 (용품박스 삽입)</li>
-							</ul>
+						<div class="box">
+							<div class="img-wrap">
+								<img src="../../assets/images/visual/main-con4-img3.png" alt="">
+							</div>
+							<div class="txt-wrap">
+								<h5>장례 후 행정안내서</h5>
+								<ul>
+									<li>사망신고, 연금신청, 상속, 보험금 청구, <br />휴대폰 해지 등 유가족 궁금증 해소</li>
+									<li>3단 접지 (용품박스 삽입)</li>
+								</ul>
+							</div>
 						</div>
-						<div>
-							<h5>제휴 장례식장 및 장지 할인</h5>
-							<ul>
-								<li>전국 유명 장지시설 및 장례식장 <br />시설사용료 할인 제공</li>
-								<li>20%~50% 할인가 제공</li>
-							</ul>
+						<div class="box">
+							<div class="img-wrap">
+								<img src="../../assets/images/visual/main-con4-img4.png" alt="">
+							</div>
+							<div class="txt-wrap">
+								<h5>제휴 장례식장 및 장지 할인</h5>
+								<ul>
+									<li>전국 유명 장지시설 및 장례식장 <br />시설사용료 할인 제공</li>
+									<li>20%~50% 할인가 제공</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -274,7 +318,7 @@
 			</div>
 		</article>
 
-		<section class="contents con6">
+		<section class="contents board">
 			<div class="con-wrap">
 				<article class="list-board">
 					<header>
@@ -331,8 +375,8 @@
 		</ul>
 		<div class="footer-address">
 			<div class="logo">
-				<img src="../../assets/images/logo-g-aplus.png" alt="A+라이프"  />
-				<img src="../../assets/images/logo-g-hoydam.png" alt="e효담">
+				<img src="../../assets/images/logo/logo-g-aplus.png" alt="A+라이프"  />
+				<img src="../../assets/images/logo/logo-g-hoydam.png" alt="e효담">
 			</div>
 			<address class="address">
 				<span>서울특별시 강남구 역삼로 415 성진빌딩 7층</span>
