--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,14 +4,14 @@
 	<title>e효담</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-	<meta name="title" content="e효담,A⁺라이프">
+	<meta name="title" content="e효담상조,A+라이프">
 	<meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
 	<meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-	<meta property="og:title" content="보람상조">
+	<meta property="og:title" content="e효담상조,A+라이프">
 	<meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
 	<meta property="og:image" content="">
 	<meta property="og:url" content="">
-	<meta name="twitter:title" content="e효담, A⁺라이프">
+	<meta name="twitter:title" content="e효담상조,A+라이프">
 	<meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
 	<meta name="twitter:image" content="-">
 	<meta name="twitter:card" content="summary_large_image">
