visual 영역 slider 추가

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,14 +21,15 @@
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/main.css">
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<header class="header">
 		<h1 class="logo">
 			<a href="index.html">
-				<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
 				<img src="../../assets/images/logo/logo-w-hoydam.png" alt="e효담상조" />
+				<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
 			</a>
 		</h1>
 		<nav class="gnb">
@@ -107,33 +108,36 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="con-wrap">
-							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
-							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+							<img src="../../assets/images/visual/slide-main-copy2.png" alt="가장 정직한 회사 노잣돈 / 수고비 절대 받지 않습니다. 후불계 업계 최고 5대 품질 보증제 실시">
+							<img src="../../assets/images/visual/slide-main-obj2.png" alt="2018 아시아 경제 올해의 희트상품, 2016 중소기업 품질경영대상, 2015 대한민국 소비자대상수상, 2015 한국품질 경영 우수기업 장례문화부분 선정, 독거노인 사랑잇기 사회공헌 2012, 한국을 빛낸 경영혁신 우수기업 선정 2012, 사회적 책임을 다하는 기업선정 2012, 대한민국 경제리더 대상수상 2012">
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="con-wrap">
-							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
-							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+							<img src="../../assets/images/visual/slide-main-copy3.png" alt="가장 경제적인 회사 메뉴판 서비스로 30% 이상 식사비 절감">
+							<img src="../../assets/images/visual/slide-main-obj3.png" alt="메뉴 [1.커피, 음료 2.주류 3.다과류 4.식사류 5.풀세트]">
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="con-wrap">
-							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
-							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
+							<img src="../../assets/images/visual/slide-main-copy4.png" alt="가장 믿을만한 회사 고객은 거짓말을 하지 않습니다. VIP 및 단체장과 250여개 기업으로부터 인정받은 최고의 의전품질">
+							<img src="../../assets/images/visual/slide-main-obj4.png" alt="">
 						</div>
 					</div>
 				</div>
+				<div class="swiper-pagination"></div>
 			</div>
-			<div class="customer-list con-wrap swiper-container">
-				<ul class="swiper-wrapper">
-					<li class="swiper-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
-					<li class="swiper-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
-					<li class="swiper-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
-					<li class="swiper-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
-					<li class="swiper-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
-					<li class="swiper-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
-				</ul>
+			<div class="customer-list con-wrap">
+				<div class="swiper-container">
+					<ul class="swiper-wrapper">
+						<li class="swiper-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
+						<li class="swiper-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
+						<li class="swiper-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
+						<li class="swiper-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
+						<li class="swiper-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
+						<li class="swiper-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
+					</ul>
+				</div>
 			</div>
 			<div class="achievements-list con-wrap">
 				<ul class="">
@@ -439,6 +443,6 @@
 			</ul>
 		</div>
 	</aside>
-	<script src="src/js/index.js"></script>
+	<script src="../js/main.js"></script>
 </body>
 </html>
