--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,12 +16,12 @@
 	<meta name="twitter:image" content="-">
 	<meta name="twitter:card" content="summary_large_image">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/main.css">
-	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -50,92 +50,141 @@
 	<main class="contents-container">
 		<article class="visual">
 			<aside class="aside-consulting">
-				<div class="consulting-form">
-					<h2>가입상담신청</h2>
-					<form action="">
-						<div>
-							<label for="">이름</label>
-							<input type="text" />
-						</div>
-						<div>
-							<label for="">연락처</label>
-							<input type="tel" />
-						</div>
-						<div>
-							<label for="">상담가능시간</label>
-							<select name="" id="">
-								<option value="">09:00 ~ 10:00</option>
-							</select>
-						</div>
-						<div class="chk-agree">
+				<div class="consulting-con">
+					<div class="consulting-form">
+						<h2>가입상담신청</h2>
+						<form action="">
 							<div>
-								<input type="checkbox" />
-								<label for="">개인정보처리방침에 동의합니다.</label>
+								<label for="">이름</label>
+								<input type="text" />
 							</div>
-							<button type="button">약관보기</button>
+							<div>
+								<label for="">연락처</label>
+								<input type="tel" />
+							</div>
+							<div>
+								<label for="">상담가능시간</label>
+								<select name="" id="">
+									<option value="">09:00 ~ 10:00</option>
+								</select>
+							</div>
+							<div class="chk-agree">
+								<div>
+									<input type="checkbox" />
+									<label for="">개인정보처리방침에 동의합니다.</label>
+								</div>
+								<button type="button">약관보기</button>
+							</div>
+							<button class="btn-red" type="submit">상담신청</button>
+						</form>
+					</div>
+					<div class="consulting-list">
+						<h2>실시간상담내역</h2>
+						<div class="list">
+							<ul class="list-head">
+								<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
+							</ul>
+							<ul class="list-body">
+								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+							</ul>
 						</div>
-						<button class="btn-red" type="submit">상담신청</button>
-					</form>
-				</div>
-				<div class="consulting-list">
-					<h2>실시간상담내역</h2>
-					<div class="list">
-						<ul class="list-head">
-							<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
-						</ul>
-						<ul class="list-body">
-							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-							<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<ul class="tel-list">
+							<li><a href="tel:1688-8860"><span>상담문의 / 09 ~ 18시</span><br /><strong>1688-8860</strong></a></li>
+							<li><a href="tel:1688-8890"><span>긴급상담 / 24시</span><br /><strong>1688-8890</strong></a></li>
 						</ul>
 					</div>
-					<ul class="tel-list">
-						<li><a href="tel:1688-8860"><span>상담문의 / 09 ~ 18시</span><br /><strong>1688-8860</strong></a></li>
-						<li><a href="tel:1688-8890"><span>긴급상담 / 24시</span><br /><strong>1688-8890</strong></a></li>
-					</ul>
 				</div>
 			</aside>
-			<div class="visual-slider swiper-container">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
+			<div class="visual-slider slick-container">
+				<div class="slick-wrapper">
+					<div class="slick-slide">
 						<div class="con-wrap">
 							<img src="../../assets/images/visual/slide-main-copy1.png" alt="가장튼튼한회사 자본금 255억 지급여력비율 158%">
 							<img src="../../assets/images/visual/slide-main-obj1.png" alt="e효담 홍보모델 길용우">
 						</div>
 					</div>
-					<div class="swiper-slide">
+					<div class="slick-slide">
 						<div class="con-wrap">
 							<img src="../../assets/images/visual/slide-main-copy2.png" alt="가장 정직한 회사 노잣돈 / 수고비 절대 받지 않습니다. 후불계 업계 최고 5대 품질 보증제 실시">
 							<img src="../../assets/images/visual/slide-main-obj2.png" alt="2018 아시아 경제 올해의 희트상품, 2016 중소기업 품질경영대상, 2015 대한민국 소비자대상수상, 2015 한국품질 경영 우수기업 장례문화부분 선정, 독거노인 사랑잇기 사회공헌 2012, 한국을 빛낸 경영혁신 우수기업 선정 2012, 사회적 책임을 다하는 기업선정 2012, 대한민국 경제리더 대상수상 2012">
 						</div>
 					</div>
-					<div class="swiper-slide">
+					<div class="slick-slide">
 						<div class="con-wrap">
 							<img src="../../assets/images/visual/slide-main-copy3.png" alt="가장 경제적인 회사 메뉴판 서비스로 30% 이상 식사비 절감">
 							<img src="../../assets/images/visual/slide-main-obj3.png" alt="메뉴 [1.커피, 음료 2.주류 3.다과류 4.식사류 5.풀세트]">
 						</div>
 					</div>
-					<div class="swiper-slide">
+					<div class="slick-slide">
 						<div class="con-wrap">
 							<img src="../../assets/images/visual/slide-main-copy4.png" alt="가장 믿을만한 회사 고객은 거짓말을 하지 않습니다. VIP 및 단체장과 250여개 기업으로부터 인정받은 최고의 의전품질">
 							<img src="../../assets/images/visual/slide-main-obj4.png" alt="">
 						</div>
 					</div>
 				</div>
-				<div class="swiper-pagination"></div>
 			</div>
 			<div class="customer-list con-wrap">
-				<div class="swiper-container">
-					<ul class="swiper-wrapper">
-						<li class="swiper-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
-						<li class="swiper-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
-						<li class="swiper-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
-						<li class="swiper-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
-						<li class="swiper-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
-						<li class="swiper-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
+				<div class="slick-container">
+					<ul class="slick-wrapper">
+						<li class="slick-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/04.png" alt="롯데백화점" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/05.png" alt="LG디스플레이" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/06.png" alt="MetLife" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/07.png" alt="삼성SDI" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/08.png" alt="posco" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/09.png" alt="한국수력원자력" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/10.png" alt="lotte chemical" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/11.png" alt="IBK기업은행" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/12.png" alt="우리은행" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/13.png" alt="삼성증권" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/14.png" alt="세계속의 경기도" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/15.png" alt="한국서부발전|주|" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/16.png" alt="(주)대홍기획" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/17.png" alt="true 우riend" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/18.png" alt="CHUBB" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/19.png" alt="에스원" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/20.png" alt="한국무역협회" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/21.png" alt="한국남동발전" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/22.png" alt="롯데손해보험" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/23.png" alt="KEB하나은행" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/24.png" alt="동부생명" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/25.png" alt="NAVER" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/26.png" alt="KRX 한국거래소" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/27.png" alt="KOMIPO 한국중부발전" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/28.png" alt="Lotte Card" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/29.png" alt="BCcard" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/30.png" alt="동부화재" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/31.png" alt="KBS" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/32.png" alt="중앙선거관리위원회" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/33.png" alt="한국남부발전|주|" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/34.png" alt="한화생명" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/35.png" alt="수협" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/36.png" alt="HeungKuk Life Insurance" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/37.png" alt="KOREAN AIR" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/38.png" alt="한국조폐공사" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/39.png" alt="한전산업개발주식회사" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/40.png" alt="한화손해보험" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/41.png" alt="DGB생명" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/42.png" alt="메리츠화재" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/43.png" alt="사학연금" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/44.png" alt="대한적십자사" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/45.png" alt="한국전력기술|주|" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/46.png" alt="한화손해사정" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/47.png" alt="대신증권" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/48.png" alt="MG손해보험" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/49.png" alt="KMA한국능률협회" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/50.png" alt="GS건설" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/51.png" alt="한국전력전우회" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/52.png" alt="한화호텔&리조트" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/53.png" alt="수호천사동양생명" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/54.png" alt="ABL" /></li>
 					</ul>
 				</div>
 			</div>
@@ -335,12 +384,12 @@
 							<button class="btn-more">more</button>
 						</div>
 					</header>
-					<div class="swiper-container">
-						<ul class="swiper-wrapper">
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
+					<div class="slick-container">
+						<ul class="slick-wrapper">
+							<li class="slick-slide"></li>
+							<li class="slick-slide"></li>
+							<li class="slick-slide"></li>
+							<li class="slick-slide"></li>
 						</ul>
 					</div>
 				</article>
@@ -356,12 +405,12 @@
 							<button class="btn-more">more</button>
 						</div>
 					</header>
-					<div class="swiper-container">
-						<ul class="swiper-wrapper">
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
-							<li class="swiper-slide"></li>
+					<div class="slick-container">
+						<ul class="slick-wrapper">
+							<li class="slick-slide"></li>
+							<li class="slick-slide"></li>
+							<li class="slick-slide"></li>
+							<li class="slick-slide"></li>
 						</ul>
 					</div>
 				</article>
@@ -395,52 +444,54 @@
 	<!-- fix 가입상담신청 폼 -->
 	<aside class="aside-consulting fix-aside">
 		<button class="btn-consulting" type="button">가입상담신청</button>
-		<div class="consulting-form">
-			<h2>가입상담신청</h2>
-			<form action="">
-				<div>
-					<label for="">이름</label>
-					<input type="text" />
-				</div>
-				<div>
-					<label for="">연락처</label>
-					<input type="tel" />
-				</div>
-				<div>
-					<label for="">상담가능시간</label>
-					<select name="" id="">
-						<option value="">09:00 ~ 10:00</option>
-					</select>
-				</div>
-				<div class="chk-agree">
+		<div class="consulting-con">
+			<div class="consulting-form">
+				<h2>가입상담신청</h2>
+				<form action="">
 					<div>
-						<input type="checkbox" />
-						<label for="">개인정보처리방침에 동의합니다.</label>
+						<label for="">이름</label>
+						<input type="text" />
 					</div>
-					<button type="button">약관보기</button>
+					<div>
+						<label for="">연락처</label>
+						<input type="tel" />
+					</div>
+					<div>
+						<label for="">상담가능시간</label>
+						<select name="" id="">
+							<option value="">09:00 ~ 10:00</option>
+						</select>
+					</div>
+					<div class="chk-agree">
+						<div>
+							<input type="checkbox" />
+							<label for="">개인정보처리방침에 동의합니다.</label>
+						</div>
+						<button type="button">약관보기</button>
+					</div>
+					<button class="btn-red" type="submit">상담신청</button>
+				</form>
+			</div>
+			<div class="consulting-list">
+				<h2>실시간상담내역</h2>
+				<div class="list">
+					<ul class="list-head">
+						<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
+					</ul>
+					<ul class="list-body">
+						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+					</ul>
 				</div>
-				<button class="btn-red" type="submit">상담신청</button>
-			</form>
-		</div>
-		<div class="consulting-list">
-			<h2>실시간상담내역</h2>
-			<div class="list">
-				<ul class="list-head">
-					<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
-				</ul>
-				<ul class="list-body">
-					<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-					<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-					<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-					<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-					<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-					<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+				<ul class="tel-list">
+					<li><a href="tel:1688-8860"><span>상담문의 / 09 ~ 18시</span><br /><strong>1688-8860</strong></a></li>
+					<li><a href="tel:1688-8890"><span>긴급상담 / 24시</span><br /><strong>1688-8890</strong></a></li>
 				</ul>
 			</div>
-			<ul class="tel-list">
-				<li><a href="tel:1688-8860"><span>상담문의 / 09 ~ 18시</span><br /><strong>1688-8860</strong></a></li>
-				<li><a href="tel:1688-8890"><span>긴급상담 / 24시</span><br /><strong>1688-8890</strong></a></li>
-			</ul>
 		</div>
 	</aside>
 	<script src="../js/main.js"></script>
