상담내역 rolling header 스크롤 스타일 변경 로고 교차 script

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,8 +28,14 @@
 	<header class="header">
 		<h1 class="logo">
 			<a href="index.html">
-				<img src="../../assets/images/logo/logo-w-hoydam.png" alt="e효담상조" />
-				<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
+				<div class="white">
+					<img src="../../assets/images/logo/logo-w-hyodam.png" alt="e효담상조" />
+					<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
+				</div>
+				<div class="black">
+					<img src="../../assets/images/logo/logo-b-hyodam.png" alt="e효담상조" />
+					<img src="../../assets/images/logo/logo-b-aplus.png" alt="A⁺라이프" />
+				</div>
 			</a>
 		</h1>
 		<nav class="gnb">
@@ -85,12 +91,14 @@
 								<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
 							</ul>
 							<ul class="list-body">
-								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-								<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO1</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO2</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO3</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO4</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO5</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO6</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO7</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+								<li><em>홍OO8</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
 							</ul>
 						</div>
 						<ul class="tel-list">
@@ -429,7 +437,7 @@
 		<div class="footer-address">
 			<div class="logo">
 				<img src="../../assets/images/logo/logo-g-aplus.png" alt="A+라이프"  />
-				<img src="../../assets/images/logo/logo-g-hoydam.png" alt="e효담">
+				<img src="../../assets/images/logo/logo-g-hyodam.png" alt="e효담">
 			</div>
 			<address class="address">
 				<span>서울특별시 강남구 역삼로 415 성진빌딩 7층</span>
@@ -494,6 +502,7 @@
 			</div>
 		</div>
 	</aside>
+	<script src="../js/common.js"></script>
 	<script src="../js/main.js"></script>
 </body>
 </html>
