form 마크업 수정

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/main.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -61,23 +61,23 @@
 						<h2>가입상담신청</h2>
 						<form action="">
 							<div>
-								<label for="">이름</label>
-								<input type="text" />
+								<label for="u-name">이름</label>
+								<input type="text" id="u-name" />
 							</div>
 							<div>
-								<label for="">연락처</label>
-								<input type="tel" />
+								<label for="u-tel">연락처</label>
+								<input type="tel" id="u-tel" />
 							</div>
 							<div>
-								<label for="">상담가능시간</label>
-								<select name="" id="">
+								<label for="u-time">상담가능시간</label>
+								<select name="time" id="u-time">
 									<option value="">09:00 ~ 10:00</option>
 								</select>
 							</div>
 							<div class="chk-agree">
 								<div>
-									<input type="checkbox" />
-									<label for="">개인정보처리방침에 동의합니다.</label>
+									<input type="checkbox" id="chk-agree" />
+									<label for="chk-agree">개인정보처리방침에 동의합니다.</label>
 								</div>
 								<button type="button">약관보기</button>
 							</div>
@@ -457,23 +457,23 @@
 				<h2>가입상담신청</h2>
 				<form action="">
 					<div>
-						<label for="">이름</label>
-						<input type="text" />
+						<label for="fix-u-name">이름</label>
+						<input type="text" id="fix-u-name" />
 					</div>
 					<div>
-						<label for="">연락처</label>
-						<input type="tel" />
+						<label for="fix-u-tel">연락처</label>
+						<input type="tel" id="fix-u-tel" />
 					</div>
 					<div>
-						<label for="">상담가능시간</label>
-						<select name="" id="">
+						<label for="fix-u-time">상담가능시간</label>
+						<select name="time" id="fix-u-time">
 							<option value="">09:00 ~ 10:00</option>
 						</select>
 					</div>
 					<div class="chk-agree">
 						<div>
-							<input type="checkbox" />
-							<label for="">개인정보처리방침에 동의합니다.</label>
+							<input type="checkbox" id="fix-chk-agree" />
+							<label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
 						</div>
 						<button type="button">약관보기</button>
 					</div>
@@ -487,12 +487,12 @@
 						<li><em>이름</em><em>상담시간</em><em>신청날짜</em></li>
 					</ul>
 					<ul class="list-body">
-						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
-						<li><em>홍OO</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO1</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO2</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO3</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO4</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO5</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
+						<li><em>홍OO6</em><em>09:00 ~ 10:00</em><em>2020-07-15</em></li>
 					</ul>
 				</div>
 				<ul class="tel-list">
