상담 고정 메뉴 작업

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,14 +28,14 @@
 	<header class="header">
 		<h1 class="logo">
 			<a href="index.html">
-				<div class="white">
+				<span class="white">
 					<img src="../../assets/images/logo/logo-w-hyodam.png" alt="e효담상조" />
 					<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
-				</div>
-				<div class="black">
+				</span>
+				<span class="black">
 					<img src="../../assets/images/logo/logo-b-hyodam.png" alt="e효담상조" />
 					<img src="../../assets/images/logo/logo-b-aplus.png" alt="A⁺라이프" />
-				</div>
+				</span>
 			</a>
 		</h1>
 		<nav class="gnb">
@@ -385,10 +385,6 @@
 					<header>
 						<h2>부고안내</h2>
 						<div class="btn-wrap">
-							<div class="btn-move">
-								<button type="button">prev</button>
-								<button type="button">next</button>
-							</div>
 							<button class="btn-more">more</button>
 						</div>
 					</header>
