상담내역 rolling effect 수정

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -388,12 +388,22 @@
 							<button class="btn-more">more</button>
 						</div>
 					</header>
-					<div class="slick-container">
-						<ul class="slick-wrapper">
-							<li class="slick-slide"></li>
-							<li class="slick-slide"></li>
-							<li class="slick-slide"></li>
-							<li class="slick-slide"></li>
+					<div>
+						<ul>
+							<li>
+								<span class="date"><em>07.01</em><em>2020</em></span>
+								<span class="title">
+									<strong>김호남 고인 부고안내</strong>
+									<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+								</span>
+							</li>
+							<li>
+								<span class="date"><em>07.01</em><em>2020</em></span>
+								<span class="title">
+									<strong>김호남 고인 부고안내</strong>
+									<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+								</span>
+							</li>
 						</ul>
 					</div>
 				</article>
