board 슬라이드 및 스타일 적용

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -391,18 +391,22 @@
 					<div>
 						<ul>
 							<li>
-								<span class="date"><em>07.01</em><em>2020</em></span>
-								<span class="title">
-									<strong>김호남 고인 부고안내</strong>
-									<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
-								</span>
+								<a href="">
+									<span class="date"><em>08.08</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
 							</li>
 							<li>
-								<span class="date"><em>07.01</em><em>2020</em></span>
-								<span class="title">
-									<strong>김호남 고인 부고안내</strong>
-									<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
-								</span>
+								<a href="">
+									<span class="date"><em>07.01</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -413,18 +417,54 @@
 						<h2>이용후기</h2>
 						<div class="btn-wrap">
 							<div class="btn-move">
-								<button type="button">prev</button>
-								<button type="button">next</button>
+								<button class="prev" type="button">prev</button>
+								<button class="next" type="button">next</button>
 							</div>
 							<button class="btn-more">more</button>
 						</div>
 					</header>
 					<div class="slick-container">
 						<ul class="slick-wrapper">
-							<li class="slick-slide"></li>
-							<li class="slick-slide"></li>
-							<li class="slick-slide"></li>
-							<li class="slick-slide"></li>
+							<li class="slick-slide">
+								<div class="thumb">
+									<img src="../../assets/images/thumb.png" alt="효담이용후기편지">
+								</div>
+								<div class="tit">
+									<a href="#">정대광 회원님의 효담 이용후기</a>
+									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
+									<span>2020.07.01</span>
+								</div>
+							</li>
+							<li class="slick-slide">
+								<div class="thumb">
+									<img src="../../assets/images/thumb.png" alt="효담이용후기편지">
+								</div>
+								<div class="tit">
+									<a href="#">정대광 회원님의 효담 이용후기</a>
+									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
+									<span>2020.07.01</span>
+								</div>
+							</li>
+							<li class="slick-slide">
+								<div class="thumb">
+									<img src="../../assets/images/thumb.png" alt="효담이용후기편지">
+								</div>
+								<div class="tit">
+									<a href="#">정대광 회원님의 효담 이용후기</a>
+									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
+									<span>2020.07.01</span>
+								</div>
+							</li>
+							<li class="slick-slide">
+								<div class="thumb">
+									<img src="../../assets/images/thumb.png" alt="효담이용후기편지">
+								</div>
+								<div class="tit">
+									<a href="#">정대광 회원님의 효담 이용후기</a>
+									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
+									<span>2020.07.01</span>
+								</div>
+							</li>
 						</ul>
 					</div>
 				</article>
