slick cdn -> 로컬 변경

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,12 +16,12 @@
 	<meta name="twitter:image" content="-">
 	<meta name="twitter:card" content="summary_large_image">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+	<link rel="stylesheet" type="text/css" href="../css/slick.css" />
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/main.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="../js/slick.min.js"></script>
 </head>
 
 <body>
@@ -208,7 +208,7 @@
 					</li>
 					<li>
 						<img src="../../assets/images/icon/icon-achievements3.png" alt="">
-						<span><em>국가주요인물 / 사회제명인사</em><br /><strong>장례 수행 실적</strong></span>
+						<span><em>국가주요인물 / 사회저명인사</em><br /><strong>장례 수행 실적</strong></span>
 					</li>
 				</ul>
 			</div>
