main 수정 부고안내 slide 추가 이용후기 data 수정 이용후기 썸네일 사이즈 정리

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -385,10 +385,94 @@
 					<header>
 						<h2>부고안내</h2>
 						<div class="btn-wrap">
+							<div class="btn-move">
+								<button class="prev" type="button">prev</button>
+								<button class="next" type="button">next</button>
+							</div>
 							<button class="btn-more">more</button>
 						</div>
 					</header>
-					<div>
+					<div class="slick-wrapper">
+						<ul>
+							<li>
+								<a href="">
+									<span class="date"><em>08.08</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<span class="date"><em>07.01</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+						</ul>
+						<ul>
+							<li>
+								<a href="">
+									<span class="date"><em>08.08</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<span class="date"><em>07.01</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+						</ul>
+						<ul>
+							<li>
+								<a href="">
+									<span class="date"><em>08.08</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<span class="date"><em>07.01</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+						</ul>
+						<ul>
+							<li>
+								<a href="">
+									<span class="date"><em>08.08</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<span class="date"><em>07.01</em><span>2020</span></span>
+									<span class="title">
+										<strong>김호남 고인 부고안내</strong>
+										<span>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</span>
+									</span>
+								</a>
+							</li>
+						</ul>
 						<ul>
 							<li>
 								<a href="">
@@ -431,8 +515,7 @@
 								</div>
 								<div class="tit">
 									<a href="#">정대광 회원님의 효담 이용후기</a>
-									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
-									<span>2020.07.01</span>
+									<p>2020.07.01</p>
 								</div>
 							</li>
 							<li class="slick-slide">
@@ -441,8 +524,7 @@
 								</div>
 								<div class="tit">
 									<a href="#">정대광 회원님의 효담 이용후기</a>
-									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
-									<span>2020.07.01</span>
+									<p>2020.07.01</p>
 								</div>
 							</li>
 							<li class="slick-slide">
@@ -451,8 +533,7 @@
 								</div>
 								<div class="tit">
 									<a href="#">정대광 회원님의 효담 이용후기</a>
-									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
-									<span>2020.07.01</span>
+									<p>2020.07.01</p>
 								</div>
 							</li>
 							<li class="slick-slide">
@@ -461,8 +542,7 @@
 								</div>
 								<div class="tit">
 									<a href="#">정대광 회원님의 효담 이용후기</a>
-									<p>[롯데백화점] 2020.05.31 ~ 06.02 의성제일병원</p>
-									<span>2020.07.01</span>
+									<p>2020.07.01</p>
 								</div>
 							</li>
 						</ul>
