--- a/src/html/sub-funeral-notice.html
+++ b/src/html/sub-funeral-notice.html
@@ -2,19 +2,19 @@
 <html lang="ko">
 
 <head>
-    <title>e효담</title>
+    <title>부고알림|장례정보|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="title" content="e효담상조,A+라이프">
+    <meta name="title" content="부고알림|장례정보|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta property="og:title" content="e효담상조,A+라이프">
-    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="description" content="전국 효담 장례 정보 안내 입니다.">
+    <meta property="og:title" content="부고알림|장례정보|e효담상조,A+라이프">
+    <meta property="og:description" content="전국 효담 장례 정보 안내 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="e효담상조,A+라이프">
-    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta name="twitter:image" content="-">
+    <meta name="twitter:title" content="부고알림|장례정보|e효담상조,A+라이프">
+    <meta name="twitter:description" content="전국 효담 장례 정보 안내 입니다.">
+    <meta name="twitter:image" content="">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
@@ -56,30 +56,31 @@
         </ul>
     </header>
 
-    <main class="content-container">
+    <main class="content-container funeral">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>상품안내</h2>
-                <p>고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.</p>
+                <h2>장례정보</h2>
+                <p>전국 효담 장례 정보 안내입니다.</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
-                            <button type="button">회사소개</button>
+                            <button type="button">장례정보</button>
                             <ul class="depth-list">
                                 <li><a href="#">회사소개</a></li>
                                 <li><a href="#">상품안내</a></li>
                                 <li><a href="#">주요고객사</a></li>
                                 <li><a href="#">이용후기</a></li>
-                                <li><a href="#">장례정보</a></li>
+                                <li class="active"><a href="#">장례정보</a></li>
                             </ul>
                         </li>
                         <li class="depth depth2">
-                            <button type="button">인사말</button>
+                            <button type="button">부고알림</button>
                             <ul class="depth-list">
-                                <li><a href="#">인사말</a></li>
-                                <li><a href="#">연혁</a></li>
-                                <li><a href="#">조직도</a></li>
+                                <li><a href="#">장사시설검색</a></li>
+                                <li><a href="#">사후행정절차</a></li>
+                                <li><a href="#">장례정보</a></li>
+                                <li class="active"><a href="#">부고알림</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -88,11 +89,124 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2></h2>
-                <p></p>
+                <h2>부고알림</h2>
+                <p>고인의 마지막 가시는 길, 정성을 다하여 모실 것을 약속드립니다.</p>
             </header>
             <div class="con-body">
-
+                <table class="board-list">
+                    <caption class="blind">부고알림 목록</caption>
+                    <colgroup>
+                        <col style="width: 83px;">
+                        <col style="width: 180px;">
+                        <col>
+                        <col style="width: 15%;">
+                        <col style="width: 20%;">
+                        <col style="width: 18%;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>고인성명</th>
+                            <th>상주성명</th>
+                            <th>별세 일시</th>
+                            <th>장례식장</th>
+                            <th>지역</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                        <tr>
+                            <td>4487</td>
+                            <td>홍길동</td>
+                            <td>홍길동</td>
+                            <td>2020.07.10</td>
+                            <td>순천향대학교부속 부천병원</td>
+                            <td>서울특별시 동대문구</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <ul class="pagination">
+                    <li class="first dimd"><a href="#">처음으로</a></li>
+                    <li class="prev dimd"><a href="#">이전</a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li class="next"><a href="#">다음</a></li>
+                    <li class="last"><a href="#">마지막으로</a></li>
+                </ul>
             </div>
         </article>
     </main>
