--- a/src/html/sub-introduce-noticelist.html
+++ b/src/html/sub-introduce-noticelist.html
@@ -2,18 +2,18 @@
 <html lang="ko">
 
 <head>
-    <title>e효담</title>
+    <title>공지사항|회사소개|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="title" content="e효담상조,A+라이프">
+    <meta name="title" content="공지사항|회사소개|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta property="og:title" content="e효담상조,A+라이프">
-    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="description" content="e효담상조 공지사항 페이지 입니다.">
+    <meta property="og:title" content="공지사항|회사소개|e효담상조,A+라이프">
+    <meta property="og:description" content="e효담상조 공지사항 페이지 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="e효담상조,A+라이프">
-    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="twitter:title" content="공지사항|회사소개|e효담상조,A+라이프">
+    <meta name="twitter:description" content="e효담상조 공지사항 페이지 입니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -56,18 +56,18 @@
         </ul>
     </header>
 
-    <main class="content-container">
+    <main class="content-container introduce">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>상품안내</h2>
-                <p>고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.</p>
+                <h2>회사소개</h2>
+                <p>효담상조는 상주분께서 안정을 되찾으실때까지 모든 준비를 하고 대응하겠습니다.</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
                             <button type="button">회사소개</button>
                             <ul class="depth-list">
-                                <li><a href="#">회사소개</a></li>
+                                <li class="active"><a href="#">회사소개</a></li>
                                 <li><a href="#">상품안내</a></li>
                                 <li><a href="#">주요고객사</a></li>
                                 <li><a href="#">이용후기</a></li>
@@ -75,11 +75,12 @@
                             </ul>
                         </li>
                         <li class="depth depth2">
-                            <button type="button">인사말</button>
+                            <button type="button">공지사항</button>
                             <ul class="depth-list">
                                 <li><a href="#">인사말</a></li>
                                 <li><a href="#">연혁</a></li>
                                 <li><a href="#">조직도</a></li>
+                                <li class="active"><a href="#">공지사항</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -88,11 +89,100 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2></h2>
-                <p></p>
+                <h2>공지사항</h2>
+                <p>효담상조에서 안내드립니다.</p>
             </header>
             <div class="con-body">
-
+                <table class="board-list">
+                    <caption class="blind">공지사항 목록</caption>
+                    <colgroup>
+                        <col style="width: 83px;">
+                        <col>
+                        <col style="width: 17.5%;">
+                        <col style="width: 9%;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>제목</th>
+                            <th>등록일</th>
+                            <th>조회수</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <ul class="pagination">
+                    <li class="first dimd"><a href="#">처음으로</a></li>
+                    <li class="prev dimd"><a href="#">이전</a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li class="next"><a href="#">다음</a></li>
+                    <li class="last"><a href="#">마지막으로</a></li>
+                </ul>
             </div>
         </article>
     </main>
