--- a/src/html/sub-reviewlist.html
+++ b/src/html/sub-reviewlist.html
@@ -2,18 +2,18 @@
 <html lang="ko">
 
 <head>
-    <title>e효담</title>
+    <title>이용후기|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="title" content="e효담상조,A+라이프">
+    <meta name="title" content="이용후기|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta property="og:title" content="e효담상조,A+라이프">
-    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="description" content="e효담상조 회원님들의 이용후기 입니다.">
+    <meta property="og:title" content="이용후기|e효담상조,A+라이프">
+    <meta property="og:description" content="e효담상조 공지사항 페이지 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="e효담상조,A+라이프">
-    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="twitter:title" content="이용후기|e효담상조,A+라이프">
+    <meta name="twitter:description" content="e효담상조 회원님들의 이용후기 입니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -56,30 +56,22 @@
         </ul>
     </header>
 
-    <main class="content-container">
+    <main class="content-container review">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>상품안내</h2>
-                <p>고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.</p>
+                <h2>이용후기</h2>
+                <p>저희 효담을 이용하신 고객님들의 소중한 후기입니다.</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
-                            <button type="button">회사소개</button>
+                            <button type="button">이용후기</button>
                             <ul class="depth-list">
                                 <li><a href="#">회사소개</a></li>
                                 <li><a href="#">상품안내</a></li>
                                 <li><a href="#">주요고객사</a></li>
-                                <li><a href="#">이용후기</a></li>
+                                <li class="active"><a href="#">이용후기</a></li>
                                 <li><a href="#">장례정보</a></li>
-                            </ul>
-                        </li>
-                        <li class="depth depth2">
-                            <button type="button">인사말</button>
-                            <ul class="depth-list">
-                                <li><a href="#">인사말</a></li>
-                                <li><a href="#">연혁</a></li>
-                                <li><a href="#">조직도</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -88,11 +80,111 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2></h2>
-                <p></p>
+                <h2>이용후기</h2>
             </header>
             <div class="con-body">
-
+                <table class="board-list">
+                    <caption class="blind">이용후기 목록</caption>
+                    <colgroup>
+                        <col style="width: 83px;">
+                        <col>
+                        <col style="width: 150px;">
+                        <col style="width: 17.5%;">
+                        <col style="width: 9%;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>제목</th>
+                            <th>작성자</th>
+                            <th>등록일</th>
+                            <th>조회수</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td>홍길동 회원</td>
+                            <td>2020.07.10</td>
+                            <td>293</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <ul class="pagination">
+                    <li class="first dimd"><a href="#">처음으로</a></li>
+                    <li class="prev dimd"><a href="#">이전</a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li class="next"><a href="#">다음</a></li>
+                    <li class="last"><a href="#">마지막으로</a></li>
+                </ul>
             </div>
         </article>
     </main>
