--- a/src/html/sub-reviewview.html
+++ b/src/html/sub-reviewview.html
@@ -2,18 +2,18 @@
 <html lang="ko">
 
 <head>
-    <title>e효담</title>
+    <title>이용후기|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="title" content="e효담상조,A+라이프">
+    <meta name="title" content="이용후기|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta property="og:title" content="e효담상조,A+라이프">
-    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="description" content="e효담상조 회원님들의 이용후기 입니다.">
+    <meta property="og:title" content="이용후기|e효담상조,A+라이프">
+    <meta property="og:description" content="e효담상조 공지사항 페이지 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="e효담상조,A+라이프">
-    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="twitter:title" content="이용후기|e효담상조,A+라이프">
+    <meta name="twitter:description" content="e효담상조 회원님들의 이용후기 입니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -56,30 +56,22 @@
         </ul>
     </header>
 
-    <main class="content-container">
+    <main class="content-container review">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>상품안내</h2>
-                <p>고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.</p>
+                <h2>이용후기</h2>
+                <p>저희 효담을 이용하신 고객님들의 소중한 후기입니다.</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
-                            <button type="button">회사소개</button>
+                            <button type="button">이용후기</button>
                             <ul class="depth-list">
                                 <li><a href="#">회사소개</a></li>
                                 <li><a href="#">상품안내</a></li>
                                 <li><a href="#">주요고객사</a></li>
-                                <li><a href="#">이용후기</a></li>
+                                <li class="active"><a href="#">이용후기</a></li>
                                 <li><a href="#">장례정보</a></li>
-                            </ul>
-                        </li>
-                        <li class="depth depth2">
-                            <button type="button">인사말</button>
-                            <ul class="depth-list">
-                                <li><a href="#">인사말</a></li>
-                                <li><a href="#">연혁</a></li>
-                                <li><a href="#">조직도</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -88,11 +80,36 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2></h2>
-                <p></p>
+                <h2>이용후기</h2>
             </header>
             <div class="con-body">
-
+                <article class="board-view">
+                    <header class="view-head">
+                        <h3>홍길동 회원님의 효담상조 이용후기</h3>
+                        <ul class="info">
+                            <li>2020.07.10</li>
+                            <li>조회수 293</li>
+                        </ul>
+                    </header>
+                    <div class="view-body">
+                        <div class="center">
+                            <img src="../../assets/images/thumb-boardview.jpg" alt="">
+                        </div>
+                    </div>
+                </article>
+                <div class="pagination-view">
+                    <dl class="prev">
+                        <dt>이전글</dt>
+                        <dd><a href="#">효담상조 공지사항 입니다.</a></dd>
+                    </dl>
+                    <dl class="next">
+                        <dt>다음글</dt>
+                        <dd>다음글이 없습니다.</dd>
+                    </dl>
+                </div>
+                <div class="btn-wrap center">
+                    <a class="linkBtn-list" href="#">목록</a>
+                </div>
             </div>
         </article>
     </main>
